Improve tutorials for devsite.

--- a/docs/site/tutorials/a_swift_tour.ipynb
+++ b/docs/site/tutorials/a_swift_tour.ipynb
@@ -22,32 +22,28 @@
       },
       "cell_type": "markdown",
       "source": [
-        "##### Copyright 2018 The TensorFlow Authors."
+        "##### Adapted from the original [*A Swift Tour*](https://docs.swift.org/swift-book/GuidedTour/GuidedTour.html) on [Swift.org](https://swift.org) with modifications. The original content was authored by Apple Inc. Licensed under the [Creative Commons Attribution 4.0 International (CC BY 4.0) License](https://creativecommons.org/licenses/by/4.0/)."
       ]
     },
     {
       "metadata": {
-        "id": "D-AoTWt4jui7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pJNp_GAv9LAh",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
-        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "// you may not use this file except in compliance with the License.\n",
-        "// You may obtain a copy of the License at\n",
-        "//\n",
-        "// https://www.apache.org/licenses/LICENSE-2.0\n",
-        "//\n",
-        "// Unless required by applicable law or agreed to in writing, software\n",
-        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "// See the License for the specific language governing permissions and\n",
-        "// limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/swift/tutorials/a_swift_tour\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/swift/blob/master/docs/site/tutorials/a_swift_tour.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/swift/blob/master/docs/site/tutorials/a_swift_tour.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
     },
     {
       "metadata": {
@@ -56,10 +52,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "A Swift Tour\n",
-        "------------\n",
-        "\n",
-        "This notebook is adapted from the original [*A Swift Tour*](https://docs.swift.org/swift-book/GuidedTour/GuidedTour.html) at [Swift.org](https://swift.org).\n",
+        "# A Swift Tour\n",
         "\n",
         "Tradition suggests that the first program in a new language should print the words \"Hello, world!\" on the screen. In Swift, this can be done in a single line:"
       ]
