--- a/docs/site/tutorials/custom_differentiation.ipynb
+++ b/docs/site/tutorials/custom_differentiation.ipynb
@@ -21,32 +21,28 @@
       },
       "cell_type": "markdown",
       "source": [
-        "##### Copyright 2018 The TensorFlow Authors."
+        "##### Copyright 2018 The TensorFlow Authors. [Licensed under the Apache License, Version 2.0](#scrollTo=Afd8bu4xJOgh)."
       ]
     },
     {
       "metadata": {
-        "id": "Qw7FdevRn-7s",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AlvdCHw5JGyx",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
-        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "// you may not use this file except in compliance with the License.\n",
-        "// You may obtain a copy of the License at\n",
-        "//\n",
-        "// https://www.apache.org/licenses/LICENSE-2.0\n",
-        "//\n",
-        "// Unless required by applicable law or agreed to in writing, software\n",
-        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "// See the License for the specific language governing permissions and\n",
-        "// limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/swift/tutorials/custom_differentiation\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/swift/blob/master/docs/site/tutorials/custom_differentiation.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/swift/blob/master/docs/site/tutorials/custom_differentiation.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
     },
     {
       "metadata": {
@@ -109,7 +105,7 @@
         "print(\"exp(3) =\", sillyExp(3))\n",
         "print(\"𝛁exp(3) =\", gradient(of: sillyExp)(3))"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +151,7 @@
         "    sin(sin(sin(x))) + cos(cos(cos(y))).withoutDerivative()\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +229,7 @@
         "    return a + b\n",
         "}"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +315,7 @@
         "    optimizer.update(&classifier.allDifferentiableVariables, along: 𝛁model)\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +457,7 @@
         "let grad = backprop(1)\n",
         "print(\"Gradient = \\(grad)\")"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +692,7 @@
         "    opt.update(&model.allDifferentiableVariables, along: dL_dθ)\n",
         "}"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,6 +741,40 @@
       "source": [
         "Just like that, it is super easy to define generic differentiable programming libraries for different domains."
       ]
+    },
+    {
+      "metadata": {
+        "id": "Afd8bu4xJOgh",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## License"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "tNgCmfUvJNoF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
+        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+        "// you may not use this file except in compliance with the License.\n",
+        "// You may obtain a copy of the License at\n",
+        "//\n",
+        "// https://www.apache.org/licenses/LICENSE-2.0\n",
+        "//\n",
+        "// Unless required by applicable law or agreed to in writing, software\n",
+        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+        "// See the License for the specific language governing permissions and\n",
+        "// limitations under the License."
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
