--- a/docs/site/tutorials/python_interoperability.ipynb
+++ b/docs/site/tutorials/python_interoperability.ipynb
@@ -21,32 +21,28 @@
       },
       "cell_type": "markdown",
       "source": [
-        "##### Copyright 2018 The TensorFlow Authors."
+        "##### Copyright 2018 The TensorFlow Authors. [Licensed under the Apache License, Version 2.0](#scrollTo=ByZjmtFgB_Y5)."
       ]
     },
     {
       "metadata": {
-        "id": "s0lke33lihW2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sI1ZtrdiA4aY",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
-        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "// you may not use this file except in compliance with the License.\n",
-        "// You may obtain a copy of the License at\n",
-        "//\n",
-        "// https://www.apache.org/licenses/LICENSE-2.0\n",
-        "//\n",
-        "// Unless required by applicable law or agreed to in writing, software\n",
-        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "// See the License for the specific language governing permissions and\n",
-        "// limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/swift/tutorials/python_interoperability\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/swift/blob/master/docs/site/tutorials/python_interoperability.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/swift/blob/master/docs/site/tutorials/python_interoperability.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
     },
     {
       "metadata": {
@@ -59,7 +55,7 @@
         "\n",
         "Swift For TensorFlow supports Python interoperability.\n",
         "\n",
-        "You can also import Python modules from Swift, call Python functions, and convert values between Swift and Python."
+        "You can import Python modules from Swift, call Python functions, and convert values between Swift and Python."
       ]
     },
     {
@@ -77,7 +73,7 @@
         "import Python\n",
         "print(Python.version)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +129,7 @@
         "print(pythonArray[2])\n",
         "print(pythonDict[\"bar\"])"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +172,7 @@
         "print(array[2])\n",
         "print(dict[\"bar\"]!)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +228,7 @@
         "    print(i, x)\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +278,7 @@
         "let tuple = pythonTuple.tuple3\n",
         "print(tuple)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +322,7 @@
         "print(Python.len([1, 2, 3]))\n",
         "print(Python.sum([1, 2, 3]))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +364,7 @@
         "let zeros = np.ones([2, 3])\n",
         "print(zeros)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +402,7 @@
         "let maybeModule = try? Python.attemptImport(\"nonexistent_module\")\n",
         "print(maybeModule)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +451,7 @@
         "print(\"Python type:\", Python.type(numpyArray))\n",
         "print(numpyArray.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +490,7 @@
         "let doubleArray: [Double] = Array(numpy: np.ones([3], dtype: np.float))!\n",
         "let intTensor = Tensor<Int32>(numpy: np.ones([2, 3], dtype: np.int32))!"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +551,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -582,6 +578,40 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "ByZjmtFgB_Y5",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## License"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "tRIJp_4m_Afz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
+        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+        "// you may not use this file except in compliance with the License.\n",
+        "// You may obtain a copy of the License at\n",
+        "//\n",
+        "// https://www.apache.org/licenses/LICENSE-2.0\n",
+        "//\n",
+        "// Unless required by applicable law or agreed to in writing, software\n",
+        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+        "// See the License for the specific language governing permissions and\n",
+        "// limitations under the License."
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
