--- a/docs/site/tutorials/using_raw_tensorflow_operators.ipynb
+++ b/docs/site/tutorials/using_raw_tensorflow_operators.ipynb
@@ -22,32 +22,28 @@
       },
       "cell_type": "markdown",
       "source": [
-        "##### Copyright 2018 The TensorFlow Authors."
+        "##### Copyright 2018 The TensorFlow Authors. [Licensed under the Apache License, Version 2.0](#scrollTo=bPJq2qP2KE3u)."
       ]
     },
     {
       "metadata": {
-        "id": "XtCPSzZqkPKu",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yfNdITLmJtX8",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
-        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "// you may not use this file except in compliance with the License.\n",
-        "// You may obtain a copy of the License at\n",
-        "//\n",
-        "// https://www.apache.org/licenses/LICENSE-2.0\n",
-        "//\n",
-        "// Unless required by applicable law or agreed to in writing, software\n",
-        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "// See the License for the specific language governing permissions and\n",
-        "// limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/swift/tutorials/using_raw_tensorflow_operators\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/swift/blob/master/docs/site/tutorials/using_raw_tensorflow_operators.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/swift/blob/master/docs/site/tutorials/using_raw_tensorflow_operators.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
     },
     {
       "metadata": {
@@ -295,6 +291,40 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "bPJq2qP2KE3u",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## License"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fSlQ2vFzKGOY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
+        "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+        "// you may not use this file except in compliance with the License.\n",
+        "// You may obtain a copy of the License at\n",
+        "//\n",
+        "// https://www.apache.org/licenses/LICENSE-2.0\n",
+        "//\n",
+        "// Unless required by applicable law or agreed to in writing, software\n",
+        "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+        "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+        "// See the License for the specific language governing permissions and\n",
+        "// limitations under the License."
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
